--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <div class="panel panel-left panel-cover">
       <div class="navbar">
         <div class="navbar-inner">
-          <div class="center">Username</div>
+          <div class="center username">Username</div>
         </div>
       </div>
 
       <div class="list-block">
         <ul>
           <li>
-            <a href="login.html" class="item-link item-content close-panel">
+            <a href="bidding.html" class="item-link item-content close-panel">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
-                <div class="item-title">Item title</div>
+                <div class="item-title">Bidding</div>
               </div>
             </a>
           </li>
@@ -106,7 +106,7 @@
             <!-- Top Navbar. In Material theme it should be inside of the page-->
             <div class="navbar">
               <div class="navbar-inner">
-                <div class="center">Awesome App</div>
+                <div class="center">Bid</div>
                 <div class="right">
                   <a href="#" class="open-panel link icon-only">
                     <i class="icon icon-bars"></i>
@@ -120,12 +120,43 @@
  
             <!-- Scrollable page content -->
             <div class="page-content">
-              <div class="content-block">
-              <p>Чтобы далеко не ходить, создадим небольшое приложение-пример, где можно будет посмотреть, как объединить отдельные компоненты фреймворка в единое приложение. Будем использовать slide menu, pull to refresh, infinite scroll, смену material/ios style на лету и огромным списком на 8000 элементов, который не тормозит (virtual list).
-              Больше ничего не потребуется, другие библиотеки или фреймворки для создания приложения не нужны. Но при желании можно использовать require.js, angular.js, matreshka.js итд.</p>
-              <!-- Link to another page -->
-              <a href="aboutd.html">About app</a>
+            <!-- <div class="content-block"> -->
+              <div class="content-block-title">Enter ID and Price</div>
+              <div class="list-block inset">
+                <ul>
+                  <!-- Text inputs -->
+                  <li>
+                    <div class="item-content">
+                      
+                      <div class="item-inner">
+                        <div class="item-title label">Lot ID</div>
+                        <div class="item-input">
+                          <input type="text" placeholder="Enter ID">
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+
+                  <!-- Text inputs -->
+                  <li>
+                    <div class="item-content">
+                      
+                      <div class="item-inner">
+                        <div class="item-title label">Price</div>
+                        <div class="item-input">
+                          <input type="text" placeholder="Enter price">
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
               </div>
+              <div class="content-block">
+              <p class="buttons-row">
+                <a href="#" class="button button-big button-fill button-raised">Button</a>
+              </p>
+              </div>
+              <!-- </div> -->
             </div>
           </div>
         </div>
