--- a/bidding.html
+++ b/bidding.html
@@ -33,7 +33,7 @@
         <div class="card-footer">
           <div>Bids: 10</div>
           <div>ID: d3535352</div>
-          <div>Set price</div>
+          <div><a href="">New price</a></div>
         </div>
       </div>
       <div class="card card-green">
@@ -50,7 +50,7 @@
         <div class="card-footer">
           <div>Bids: 10</div>
           <div>ID: d3535352</div>
-          <div>Set price</div>
+          <div><a href="">New price</a></div>
         </div>
       </div>
       <div class="card card-green">
@@ -67,7 +67,7 @@
         <div class="card-footer">
           <div>Bids: 10</div>
           <div>ID: d3535352</div>
-          <div>Set price</div>
+          <div><a href="">New price</a></div>
         </div>
       </div>
       <div class="card card-green">
@@ -84,7 +84,7 @@
         <div class="card-footer">
           <div>Bids: 10</div>
           <div>ID: d3535352</div>
-          <div>Set price</div>
+          <div><a href="">New price</a></div>
         </div>
       </div>
       <div class="card card-green">
@@ -101,7 +101,7 @@
         <div class="card-footer">
           <div>Bids: 10</div>
           <div>ID: d3535352</div>
-          <div>Set price</div>
+          <div><a href="">New price</a></div>
         </div>
       </div>
          
