--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <div class="panel panel-left panel-cover">
       <div class="navbar">
         <div class="navbar-inner">
-          <div class="center username">Username</div>
+          <div class="center" id="username">Username</div>
         </div>
       </div>
 
       <div class="list-block">
         <ul>
           <li>
-            <a href="bidding.html" class="item-link item-content close-panel">
+            <a id="bidding" href="#" class="item-link item-content close-panel">
               <div class="item-media"><i class="icon icon-f7"></i></div>
               <div class="item-inner">
                 <div class="item-title">Bidding</div>
