--- a/bidding.html
+++ b/bidding.html
@@ -43,7 +43,12 @@
         </div>
       </div>
       {{else}}
-      NOOOOOOO
+      <div class="content-block-title">No lots</div>
+      <div class="card">
+        <div class="card-content">
+          <div class="card-content-inner">Bidding list is empty</div>
+        </div>
+      </div>
       {{/each}}
     </div>
   </div>
